SERVER-41022 Allow arrayFilters on non-encrypted fields

GitOrigin-RevId: 8fbe7c6fc0d0826858a830a131bdb83ddbc900fc